3709
Sorry, I was a little fast with my initial reply. I don't know whether that's a bug or not (if you ask me, just avoid types involving `#`). Here is a slightly more simplified version:
```scala
class GraphFun {
  class Node(val out : Edge)
  class Edge
}

class CfgFun {
  val gfun = new GraphFun

  class Cfg {
    type Node = gfun.Node
    type Edge = gfun.Edge
  }
}

trait DFST {
  val cfg: CfgFun#Cfg
  val n: cfg.Node
  val e: cfg.Edge = n.out
}
```
```scala
graph.scala:20: error: type mismatch;
 found   : _7.type#gfun.Edge
 required: DFST.this.cfg.Edge
  val e: cfg.Edge = n.out
                      ^
```
